# jpegwrapper

./: CMakeLists.txt  README.md
cmake/: JPEGWrapperConfig.cmake.in
src/: JPEGWriter.cpp  JPEGWriter.h
